# monorepo-with-nix

./: README.md  flake.nix
analytics/: .envrc  README.md  pyproject.toml
analytics/analytics_stuff/: main.py
analytics/nix/: outputs.nix
backend/: Cargo.toml
backend/nix/: outputs.nix
backend/src/: main.rs
frontend/: .env  .envrc  README.md  package-lock.json  package.json  vitest.config.ts
frontend/nix/: outputs.nix
frontend/src/: App.vue
frontend/src/components/: HelloWorld.vue
frontend/src/components/__tests__/: HelloWorld.spec.ts
infra/: build-docker-images  docker-compose.yaml
infra/nix/: outputs.nix
nix/: formatting.nix  pkgs.nix  serve.nix
